# bash_scripts

./: .gitignore  .gitlab-ci.yml  .goosehints  .shellcheckrc  AGENTS.md  LICENCE.txt  README.md  README.txt  README.txt.bak  setup.sh
.beads/: issues.jsonl
RCs/: dot.bash_aliases  dot.screenrc  dot.vimrc  dot.vimrc.orig
apt/: apt-reinstall.sh  automated_apt.sh  crontab.example  list_ppa.sh  reboot-check.sh  update-apt.sh
audio/: README.md  audio_quick.sh  audio_router.sh
backup/: BackupWrapper.cfg  BackupWrapper.sh  rsync.net.sh
block/: block_size.sh  btrfs-subvolume-backup.sh  dd_ibs_test.sh  dd_obs_test.sh  dhcpd.conf  start-scrutiny.sh
calc/: solve.sh
cicd/: README_jenkins_netrc.md  example.netrc  jenkins_builds.sh  jenkins_logs.sh
cicd/jenkins-stats/: .gitignore  LICENSE  README.md  jenkins-export  jenkins_job_exporter.py  pyproject.toml
cicd/jenkins-stats/jenkins_stats/: __init__.py  __main__.py  cli.py  exporter.py
cicd/jenkins-stats/tests/: test_exporter.py
cloud/: CRITICAL_FIXES.md  EXTRACT_IMAGE_LAYERS_REVIEW.md  FIXES_APPLIED.md  README-docker-image-to-filesystem.md  REVIEW_SUMMARY.md  aws-exec-wrapper.sh  container_filesystem_explorer.sh  debug-acr-script.sh  docker-diff.sh  docker-image-to-filesystem.sh  extract_image_layers.sh  get-acr-repo-and-tag-parallel.sh  get_container_files.sh  mystars.sh  search-docker-tags.sh  taglist_docker.sh
cpufreq/: cpuspeed.sh  setcpuscale.sh  showcpuspeed.sh
display/: lg-monitor-control.sh  monitor-reset.sh
mail/: postfix-top-users.sh
media/: flac2mp3.sh  flac2mp3_wrapper.sh  video-split.sh  ytdl-wrapper.sh
misc/: check-cert.sh  check-intermediate.sh  check_cert.sh  date-and-hostname.sh  dus.sh  extract-pages.sh  random.sh  rename-on-parent.sh  win7-autologon.reg  ytdl-wrapper.sh
network/: alt-route-hosts.sh  cifs-umount.sh  ipv6-check.sh  list_interfaces.sh  longurl.sh  myip.sh  netsched.sh  shaper-off.sh  shaper-report.sh  share-local-x.sh  speedtest-int.sh  speedtest-shaw.sh  wait-for-it.sh  wondershaper-1.1a.sh
pikvm/: pikvm_mouse_config.sh  pikvm_mouse_fix.sh
power/: suspendtodisk.sh  suspendtomem.sh
sys/: check-service.sh  docker-killall.sh  get-x-resource-users.sh  list-swap.sh  manopt.sh  memuse-mac.sh  memuse.sh  newmode.sh  reboot-check.sh  reboot_check.sh  swap2ram.sh  usb_reset.sh
user-interface/: hdd-keyboard-led.sh  sshag.sh
